# GeoIndexity

./: LICENSE  Project Proposal.docx  README.md  environment.yml  pyproject.toml
docs/: CHANGELOG.md  Project Proposal.docx  documentation.md
geoindexity/: geoindexity.py
geoindexity/.ipynb_checkpoints/: config-checkpoint.py  geoindexity-checkpoint.py
src/geoindexity/: examples.py  geoindexity.py
test/: geoindexity_testing.ipynb  test.ipynb  test_david.ipynb  test_gernot.ipynb  test_gernot3.ipynb
test/.ipynb_checkpoints/: geoindexity_testing-checkpoint.ipynb  test-checkpoint.ipynb  test_david-checkpoint.ipynb  test_gernot2-checkpoint.ipynb  test_rohit-checkpoint.ipynb
